# ifc-lite

./: .gitattributes  .gitignore  Cargo.toml  README.md  deny.toml  mkdocs.yml
.github/workflows/: ci.yml  docs.yml
apps/viewer/src/components/viewer/: ViewportContainer.tsx
apps/viewer/src/hooks/: useIfc.ts
crates/ifc-lite-bevy/: Cargo.toml  build-apple.sh
crates/ifc-lite-bevy/include/: libifc_lite_bevy.h
crates/ifc-lite-bevy/src/: camera.rs  lib.rs  loader.rs  main.rs  mesh.rs  picking.rs  section.rs  storage.rs
crates/ifc-lite-bevy/src/ffi/: apple.rs  mod.rs
crates/ifc-lite-bevy/src/native_view/: app_views.rs  ios.rs  macos.rs  mod.rs  plugin.rs
crates/ifc-lite-bevy/src/ui/: hierarchy.rs  layout.rs  mod.rs  properties.rs  styles.rs  toolbar.rs
crates/ifc-lite-bevy/web/: index.html
crates/ifc-lite-ffi/: Cargo.toml  build-apple.sh
crates/ifc-lite-ffi/bindings/: ifc_lite_ffi.swift  ifc_lite_ffiFFI.h  ifc_lite_ffiFFI.modulemap
crates/ifc-lite-ffi/bindings/uniffi/ifc_lite_ffi/: ifc_lite_ffi.kt
crates/ifc-lite-ffi/src/: lib.rs
crates/ifc-lite-geometry/: Cargo.toml
crates/ifc-lite-geometry/src/: error.rs  extrusion.rs  lib.rs  mesh.rs  processors.rs  profile.rs  router.rs  triangulation.rs
crates/ifc-lite-leptos/: Cargo.toml
crates/ifc-lite-leptos/src/: bridge.rs  lib.rs  state.rs  utils.rs
crates/ifc-lite-leptos/src/components/: hierarchy_panel.rs  mod.rs  properties_panel.rs  status_bar.rs  toolbar.rs  viewer_layout.rs  viewport.rs
crates/ifc-lite-model/: Cargo.toml
crates/ifc-lite-model/src/: error.rs  geometry.rs  lib.rs  properties.rs  resolver.rs  spatial.rs  traits.rs  types.rs
crates/ifc-lite-parser/: Cargo.toml
crates/ifc-lite-parser/src/: decoder.rs  lib.rs  model.rs  properties.rs  resolver.rs  scanner.rs  spatial.rs  tokenizer.rs  units.rs
crates/ifc-lite-swift/: README.md
crates/ifc-lite-swift/IfcLiteViewer/: Package.swift
crates/ifc-lite-swift/IfcLiteViewer/IfcLiteViewer/: IfcLiteViewerApp.swift  Info.plist
crates/ifc-lite-swift/IfcLiteViewer/IfcLiteViewer.xcodeproj/: project.pbxproj
crates/ifc-lite-swift/IfcLiteViewer/IfcLiteViewer.xcodeproj/project.xcworkspace/xcuserdata/htr.xcuserdatad/: UserInterfaceState.xcuserstate
crates/ifc-lite-swift/IfcLiteViewer/IfcLiteViewer.xcodeproj/xcshareddata/xcschemes/: IfcLiteViewer.xcscheme
crates/ifc-lite-swift/IfcLiteViewer/IfcLiteViewer.xcodeproj/xcuserdata/htr.xcuserdatad/xcschemes/: xcschememanagement.plist
crates/ifc-lite-swift/IfcLiteViewer/IfcLiteViewer/Assets.xcassets/AccentColor.colorset/: Contents.json
crates/ifc-lite-swift/IfcLiteViewer/IfcLiteViewer/Components/: HierarchyPanel.swift  PropertiesPanel.swift  ToolbarView.swift
crates/ifc-lite-swift/IfcLiteViewer/IfcLiteViewer/ViewModels/: ViewerViewModel.swift
crates/ifc-lite-swift/IfcLiteViewer/IfcLiteViewer/Views/: BevyMetalView.swift  ContentView.swift  SceneKitView.swift  ViewportView.swift
crates/ifc-lite-unified/: Cargo.toml
crates/ifc-lite-unified/src/: bridge.rs  lib.rs
crates/ifc-lite-viewer/: Cargo.toml  Trunk.toml  bevy_viewer.d.ts  bevy_viewer_bg.wasm.d.ts  index.html  organize-dist.sh
crates/ifc-lite-viewer-leptos/: Cargo.toml  Trunk.toml  index.html
crates/ifc-lite-viewer-leptos/src/: lib.rs
crates/ifc-lite-viewer/src/: lib.rs  main.rs
crates/ifc-lite-viewer/static/: styles.css
crates/ifc-lite-yew/: Cargo.toml
crates/ifc-lite-yew/src/: bridge.rs  lib.rs  utils.rs
crates/ifc-lite-yew/src/components/: hierarchy_panel.rs  mod.rs  properties_panel.rs  status_bar.rs  toolbar.rs  viewer_layout.rs  viewport.rs
crates/ifc-lite-yew/src/state/: mod.rs
plan/: bevy-yew-migration-plan.md
rust/core/src/: decoder.rs  parser.rs  schema_gen.rs
rust/geometry/: Cargo.toml
rust/geometry/src/: bool2d.rs  csg.rs  extrusion.rs  lib.rs  processors.rs  profile.rs  router.rs  void_analysis.rs  void_index.rs
rust/geometry/tests/: csg_void_test.rs
rust/wasm-bindings/src/: api.rs  gpu_geometry.rs
scripts/: build-config.toml  build-config.toml.example  build-unified.sh  build-wasm-split.sh
tests/ifc/: gldf-exported.ifc
tests/models/ara3d/: ISSUE_126_model.ifc  ISSUE_129_N1540_17_EXE_MOD_448200_02_09_11SMC_IGC_V17.ifc  ISSUE_159_kleine_Wohnung_R22.ifc  S_Office_Integrated Design Archi.ifc  advanced_model.ifc  dental_clinic.ifc  ifcbridge-model01.ifc
