[workspace]
members = [
    "crates/ifc-lite-bevy",
    "crates/ifc-lite-ffi",
    "crates/ifc-lite-geometry",
    "crates/ifc-lite-leptos",
    "crates/ifc-lite-model",
    "crates/ifc-lite-parser",
    "crates/ifc-lite-unified",
    "crates/ifc-lite-viewer",
    "crates/ifc-lite-viewer-leptos",
    "crates/ifc-lite-yew",
    "rust/core",
    "rust/geometry",
    "rust/wasm-bindings",
]
resolver = "2"

[workspace.package]
version = "1.1.7"
edition = "2021"
authors = ["IFC-Lite Contributors"]
license = "MPL-2.0"
repository = "https://github.com/louistrue/ifc-lite"

[profile.release]
opt-level = 3           # Optimize for speed
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization (slower compile)
strip = true            # Strip symbols
panic = 'abort'         # Smaller panic handler
overflow-checks = false # Remove overflow checks in release

[profile.release.package."*"]
opt-level = 3
strip = true

# Pin wasm-bindgen to match installed CLI version
[workspace.dependencies]
wasm-bindgen = "=0.2.106"
wasm-bindgen-futures = "=0.4.56"
js-sys = "=0.3.83"
web-sys = "=0.3.83"
