[package]
name = "ifc-lite-bevy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Bevy-based 3D viewer for IFC models with WebGPU/WebGL2 rendering"

[lib]
name = "ifc_lite_bevy"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "ifc-viewer"
path = "src/main.rs"

[features]
default = ["external-ui"]
# Use pure Bevy UI (works on web and native) - WIP, waiting for Bevy 0.19
bevy-ui = []
# Use external UI (Yew for web, SwiftUI for Apple) - 3D viewport only
external-ui = []
webgl2 = []
native-view = [] # Enable embedded native view support (iOS/macOS)

[dependencies]
# Core IFC parsing and geometry
ifc-lite-core = { path = "../../rust/core" }
ifc-lite-geometry = { path = "../../rust/geometry" }

# Math library (same as ifc-lite-geometry)
nalgebra = { version = "0.33", default-features = false, features = ["std"] }

# Error handling
anyhow = "1.0"
log = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Fast hashing
rustc-hash = "1.1"

# Window handles for native embedding
raw-window-handle = "0.6"

# UUID for window IDs
uuid = { version = "1.0", features = ["v4"] }

# Bevy 3D engine - common features (viewport only, no UI)
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_gizmos",
    "bevy_picking",
    "tonemapping_luts",
    "png",
    "zstd_rust",
] }

# Desktop (Linux/Windows) dependencies
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios"), not(target_os = "macos")))'.dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_gizmos",
    "bevy_picking",
    "multi_threaded",
    "tonemapping_luts",
    "png",
    "x11",
    "zstd_rust",
    "webgpu",
] }
rfd = "0.15"

# WASM build dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
base64 = "0.22"
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_gizmos",
    "bevy_picking",
    "webgpu",
    "tonemapping_luts",
    "png",
    "zstd_rust",
] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Storage",
    "console",
] }

# iOS dependencies
[target.'cfg(target_os = "ios")'.dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_gizmos",
    "bevy_picking",
    "tonemapping_luts",
    "png",
    "zstd_rust",
] }
core-graphics = "0.24"
objc = "0.2"

# macOS dependencies
[target.'cfg(target_os = "macos")'.dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_gizmos",
    "bevy_picking",
    "multi_threaded",
    "tonemapping_luts",
    "png",
    "zstd_rust",
] }
core-graphics = "0.24"
objc = "0.2"
