[package]
name = "ifc-lite-bevy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Bevy-based 3D viewer for IFC models with WebGPU/WebGL2 rendering"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "ifc_lite_bevy"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "ifc-viewer"
path = "src/main.rs"

[features]
default = ["bevy-ui"]
# Use pure Bevy UI (works on web and native) - unified single-WASM approach
bevy-ui = []
# Use external UI (Yew for web, SwiftUI for Apple) - 3D viewport only
# Note: external-ui requires running Yew separately, not recommended for web
external-ui = []
webgl2 = []
native-view = [] # Enable embedded native view support (iOS/macOS)
# Enable color palette switching (stores entity type info for each vertex range)
color-palette = []

[dependencies]
# Core IFC parsing and geometry (trait-based architecture)
ifc-lite-model = { path = "../ifc-lite-model" }
ifc-lite-parser = { path = "../ifc-lite-parser" }
ifc-lite-geometry-new = { path = "../ifc-lite-geometry" }

# Math library (same as ifc-lite-geometry)
nalgebra = { version = "0.33", default-features = false, features = ["std"] }

# Error handling
anyhow = "1.0"
log = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Fast hashing
rustc-hash = "1.1"

# Zero-copy byte casting
bytemuck = { version = "1.14", features = ["derive"] }

# Window handles for native embedding
raw-window-handle = "0.6"

# UUID for window IDs
uuid = { version = "1.0", features = ["v4"] }

# Bevy 3D engine - common features (viewport only, no UI)
# Note: bevy_ui and bevy_text are always included for now since the UI is needed
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_gizmos",
    "bevy_picking",
    "bevy_ui",
    "bevy_text",
    "default_font",
    "tonemapping_luts",
    "png",
    "zstd_rust",
] }

# Desktop (Linux/Windows) dependencies
[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "ios"), not(target_os = "macos")))'.dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_gizmos",
    "bevy_picking",
    "bevy_ui",
    "bevy_text",
    "default_font",
    "multi_threaded",
    "tonemapping_luts",
    "png",
    "x11",
    "zstd_rust",
    "webgpu",
] }
rfd = "0.15"

# WASM build dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
base64 = "0.22"
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_gizmos",
    "bevy_picking",
    "bevy_ui",
    "bevy_text",
    "default_font",
    "webgpu",
    "tonemapping_luts",
    "png",
    "zstd_rust",
] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "console",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FileReader",
    "HtmlElement",
    "HtmlInputElement",
    "Location",
    "Storage",
    "Window",
] }

# iOS dependencies
[target.'cfg(target_os = "ios")'.dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_gizmos",
    "bevy_picking",
    "bevy_ui",
    "bevy_text",
    "default_font",
    "tonemapping_luts",
    "png",
    "zstd_rust",
] }
core-graphics = "0.24"
objc = "0.2"

# macOS dependencies
[target.'cfg(target_os = "macos")'.dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_state",
    "bevy_gizmos",
    "bevy_picking",
    "bevy_ui",
    "bevy_text",
    "default_font",
    "multi_threaded",
    "tonemapping_luts",
    "png",
    "zstd_rust",
] }
core-graphics = "0.24"
objc = "0.2"
