[package]
name = "ifc-lite-ffi"
version = "0.1.0"
edition = "2021"
description = "UniFFI bindings for IFC-Lite - Swift (iOS/macOS) and Kotlin (Android)"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "ifc_lite_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"
required-features = ["cli"]

[features]
default = []
cli = ["uniffi/cli"]

[dependencies]
# Core IFC parsing
ifc-lite-core = { path = "../../rust/core" }
ifc-lite-geometry = { path = "../../rust/geometry" }

# UniFFI for cross-platform bindings (proc-macro mode)
uniffi = { version = "0.28" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Thread-safe state management
parking_lot = "0.12"
once_cell = "1.19"

# Error handling
thiserror = "2.0"

[dev-dependencies]
uniffi = { version = "0.28", features = ["bindgen-tests"] }

# iOS/macOS specific
[target.'cfg(target_os = "ios")'.dependencies]

[target.'cfg(target_os = "macos")'.dependencies]

# Android specific
[target.'cfg(target_os = "android")'.dependencies]
