[package]
name = "ifc-lite-viewer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "IFC-Lite web viewer - unified Yew UI + Bevy 3D in single WASM"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

# Note: bin target removed - using lib.rs as WASM entry point with #[wasm_bindgen(start)]

[dependencies]
# UI components (Yew-based) - unified mode for direct memory sharing
ifc-lite-yew = { path = "../ifc-lite-yew", features = ["unified"] }

# 3D renderer (Bevy-based) - included in same WASM
ifc-lite-bevy = { path = "../ifc-lite-bevy", default-features = false }

# Yew framework
yew = { version = "0.22", features = ["csr"] }

# WASM
console_error_panic_hook = "0.1"
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = ["console", "Window"] }

# Logging
log = "0.4"

# Shared state
once_cell = "1.19"
